[package]
name = "flute-sender"
version = "1.0.0"
edition = "2021"
description = "FLUTE Sender example"
keywords = ["multicast", "network", "broadcast", "5g", "satellite"]
categories = ["network-programming", "encoding", "aerospace::space-protocols"]

[dependencies]
log  = "0.4"
flute = { path = "../.." }
env_logger = "0.11"
url = "2.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
rayon = "1.11.0"
crossbeam-channel = "0.5.15"

